--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="apple-mobile-web-app-title" content="Reyohoho">
     <link rel="apple-touch-icon" href="/icons/android-chrome-192x192.png">
 
-    <!-- Шрифты и стили -->
+    <!-- Импорт иконок -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Тема PWA -->
