--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Reyohoho - онлайн просмотр кино и сериалов</title>
 
     <!-- Манифест PWA -->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.webmanifest" />
 
     <!-- Мета-теги для iOS -->
     <meta name="mobile-web-app-capable" content="yes">
